# min12xxw

./: Makefile  README.md
src/: FAQ  Makefile.am  Makefile.in  README.OSX  config.h.in  configure  configure.ac  esc-m.c  getline.c  getline.h  getopt.h  getopt1.c  min12xxw.1  min12xxw.c
